--- a/systemd-git-1.0.template
+++ b/systemd-git-1.0.template
@@ -1,29 +1,11 @@
-_distdir="${_distname}-${pkgver}"
-depends+=(systemd-libs)
+depends+=(dbus-glib systemd-libs)
 conflicts+=("alchemy-next-viewer-nosystemd-git")
 
-pkgver() {
-  cd "${pkgname}" || exit 1
-  (
-  set -o pipefail
-  vwr_version=$(cat indra/newview/VIEWER_VERSION.txt)
-  rev=$(git rev-list --count HEAD)
-  short=$(git rev-parse --short HEAD)
-  printf "%s.%s.%s" "${vwr_version}" "${rev}" "${short}"
-)
-}
+#template start; name=prepare; version=1.0
+#template end
 
-# template start; name=prepare; version=1.0
-# template end
-# template start; name=build; version=1.0
-# template end
+#template start; name=build; version=1.0
+#template end
 
-package() {
-  mkdir -p "${pkgdir}/opt"
-  mkdir -p "${pkgdir}/usr/local/share/applications"
-  # Patch shortcut to avoid duplicated entries
-  sed -i 's;Name=Alchemy;Name=Alchemy (git build);' "${pkgname}/build-linux-64/newview/packaged/etc/refresh_desktop_app_entry.sh"
-  sed -i 's;alchemy-viewer\.desktop;'"${pkgname}\.desktop"';' "${pkgname}/build-linux-64/newview/packaged/etc/refresh_desktop_app_entry.sh"
-  mv "${pkgname}/build-linux-64/newview/packaged" "${pkgdir}/opt/${pkgname}"
-}
-
+#template start; name=package; version=1.0
+#template end
