--- a/nosystemd-git-1.0.template
+++ b/nosystemd-git-1.0.template
@@ -1,12 +1,14 @@
 depends+=(libelogind)
 conflicts+=("alchemy-next-viewer-systemd-git")
 
-#template start; name=prepare; version=1.0
-#template end
+# template start; name=pkgver; version=1.0
+# template end
 
-#template start; name=build; version=1.0
-#template end
+# template start; name=prepare; version=1.0
+# template end
 
-#template start; name=package; version=1.0
-#template end
+# template start; name=build; version=1.0
+# template end
 
+# template start; name=package; version=1.0
+# template end
