--- a/systemd-git-1.0.template
+++ b/systemd-git-1.0.template
@@ -1,3 +1,14 @@
+# template start; name=base; version=1.0;
+# template end;
+# template start; name=deps; version=1.0;
+# template end;
+pkgname=alchemy-next-viewer-git
+pkgver=0.0.0.0
+pkgrel=1
+replaces=('alchemy-viewer-git')
+provides=('alchemy-viewer')
+source=("${pkgname}"::'git+https://git.alchemyviewer.org/alchemy/alchemy-next.git#branch='"${AL_BRANCH_OVERRIDE:-main}")
+sha256sums=('SKIP')
 depends+=(dbus-glib systemd-libs)
 conflicts+=("alchemy-next-viewer-nosystemd-git")
 
