--- a/deps-1.0.template
+++ b/deps-1.0.template
@@ -1,4 +1,4 @@
-depends=(glu libgl libiconv libidn libjpeg-turbo libpng libxss libxml2 mesa nss openal sdl2 vlc xdg-desktop-portal zlib)
+depends=(glu libgl libiconv libidn libjpeg-turbo libpng libxss libxml2 mesa nss openal sdl2 vlc zlib)
 makedepends=('gcc' 'python-virtualenv' 'python-pip' 'git' 'xz')
 optdepends=(
   'alsa-lib: ALSA support'
@@ -12,4 +12,5 @@ optdepends=(
   'mesa-libgl: Intel, Radeon, Nouveau support'
   'nvidia-libgl: NVIDIA support'
   'nvidia-utils: NVIDIA support'
-  'wine: More up-to-date, less buggy SLVoice support')
+  'wine: More up-to-date, less buggy SLVoice support'
+  'xdg-desktop-portal: File picker portal')
