use a single pip command to install all pip packages

--- a/prepare-1.0.template
+++ b/prepare-1.0.template
@@ -5,8 +5,5 @@ prepare() {
     source "${srcdir}/.venv/bin/activate"
 
     msg2 "Installing build toolchain..."
-    pip3 install --upgrade certifi --quiet
-    pip3 install --upgrade llbase --quiet
-    pip3 install --no-cache --upgrade autobuild --quiet
-    pip3 install --upgrade cmake ninja
+    pip3 install --upgrade cmake llbase llsd certifi autobuild ninja
 }
