build script tweaks

--- a/build-1.0.template
+++ b/build-1.0.template
@@ -1,5 +1,7 @@
 build() {
   cd "${pkgname}" || exit 1
+  msg2 "Configuring build environment..."
+  _logfile="${srcdir}/build.${CARCH}.$(date +%s).log"
   source "${srcdir}/.venv/bin/activate"
   build_jobs=$(nproc)
   if [[ -z "$NO_SMART_JOB_COUNT" ]]; then
@@ -64,7 +66,6 @@ build() {
         -DVIEWER_CHANNEL="Alchemy Test"
       )
       #msg2 "BUILDENV: ${BUILDENV[*]}"
-      msg2 "Configuring build environment..."
       # if [[ " ${BUILDENV[*]} " =~ ' ccache ' ]] && command -v ccache >/dev/null 2>&1; then
       AL_CMAKE_CONFIG+=("-DCMAKE_CXX_COMPILER_LAUNCHER=$(which ccache)")
         msg2 "ccache was found and will be used"
@@ -74,8 +75,8 @@ build() {
         AL_CMAKE_CONFIG+=("-DCMAKE_CXX_COMPILER=$(which clang++)")
         msg2 "clang was found and will be used instead of gcc"
       fi
-      _logfile="${srcdir}/build.${CARCH}.$(date +%s).log"
+      msg2 "Configuring the build"
       $prefix_cmd autobuild configure -A 64 -c ReleaseOS -- "${AL_CMAKE_CONFIG[@]}" > >(tee -a "$_logfile") 2> >(tee -a "$_logfile" >&2)
-      msg2 "Building with ${AUTOBUILD_CPU_COUNT} jobs"
+      msg2 "Starting the build with ${AUTOBUILD_CPU_COUNT} jobs"
       $prefix_cmd autobuild build -A 64 -c ReleaseOS --no-configure > >(tee -a "$_logfile") 2> >(tee -a "$_logfile" >&2)
     }
