--- a/nosystemd-git-1.0.template
+++ b/nosystemd-git-1.0.template
@@ -8,7 +8,7 @@ pkgrel=1
 provides=('alchemy-viewer')
 source=("${pkgname}"::'git+https://git.alchemyviewer.org/alchemy/alchemy-next.git#branch='"${AL_BRANCH_OVERRIDE:-main}")
 sha256sums=('SKIP')
-depends+=(libelogind)
+depends+=('libelogind')
 conflicts+=("alchemy-next-viewer-systemd-git")
 
 # template start; name=pkgver; version=1.0
