--- a/systemd-git-1.0.template
+++ b/systemd-git-1.0.template
@@ -9,7 +9,7 @@ replaces=('alchemy-viewer-git')
 provides=('alchemy-viewer')
 source=("${pkgname}"::'git+https://git.alchemyviewer.org/alchemy/alchemy-next.git#branch='"${AL_BRANCH_OVERRIDE:-main}")
 sha256sums=('SKIP')
-depends+=(dbus-glib systemd-libs)
+depends+=('dbus-glib' 'systemd-libs')
 conflicts+=("alchemy-next-viewer-nosystemd-git")
 
 # template start; name=pkgver; version=1.0
