--- a/nosystemd-git-1.0.template
+++ b/nosystemd-git-1.0.template
@@ -6,8 +6,8 @@ pkgname=alchemy-next-viewer-nosystemd-git
 pkgver=0.0.0.0
 pkgrel=1
 provides=('alchemy-viewer')
-source=("${pkgname}"::'git+https://git.alchemyviewer.org/alchemy/alchemy-next.git#branch='"${AL_BRANCH_OVERRIDE:-main}")
-sha256sums=('SKIP')
+# template start; name=source; version=1.0
+# template end
 # Not included as a dependency as it is impossible to update the package otherwise
 #depends+=('libelogind')
 conflicts+=("alchemy-next-viewer-systemd-git")
