--- a/systemd-git-1.0.template
+++ b/systemd-git-1.0.template
@@ -7,8 +7,8 @@ pkgver=0.0.0.0
 pkgrel=1
 replaces=('alchemy-viewer-git')
 provides=('alchemy-viewer')
-source=("${pkgname}"::'git+https://git.alchemyviewer.org/alchemy/alchemy-next.git#branch='"${AL_BRANCH_OVERRIDE:-main}")
-sha256sums=('SKIP')
+# template start; name=source; version=1.0
+# template end
 depends+=('dbus-glib' 'systemd-libs')
 conflicts+=("alchemy-next-viewer-nosystemd-git")
 
