update templates for new package name

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "systemd-git"]
 	path = systemd-git
-	url = ssh://aur@aur.archlinux.org/alchemy-next-viewer-git.git
-[submodule "nosystemd-git"]
-	path = nosystemd-git
-	url = ssh://aur@aur.archlinux.org/alchemy-next-viewer-nosystemd-git.git
+	url = ssh://aur@aur.archlinux.org/alchemy-viewer-git.git
