--- a/source-1.0.template
+++ b/source-1.0.template
@@ -1,2 +1,2 @@
-source=("${pkgname}"::'git+https://git.alchemyviewer.org/alchemy/viewer.git#branch='"${AL_BRANCH_OVERRIDE:-main}")
+source=("${pkgname}"::'git+https://github.com/AlchemyViewer/Alchemy.git#branch='"${AL_BRANCH_OVERRIDE:-main}")
 sha256sums=('SKIP')
