sync dependencies for non-systemd build

--- a/nosystemd-git/PKGBUILD
+++ b/nosystemd-git/PKGBUILD
@@ -14,7 +14,7 @@ install=alchemy.install
 # template end;
 # template start; name=deps; version=1.0;
 depends=('glu' 'libgl' 'libiconv' 'libidn' 'libjpeg-turbo' 'libpng' 'libxml2' 'libxss' 'mesa' 'nss' 'openal' 'sdl2' 'vlc' 'zlib')
-makedepends=('gcc' 'python-pip' 'python-virtualenv' 'git')
+makedepends=('gcc' 'python-pip' 'python-virtualenv' 'git' 'procps-ng')
 optdepends=(
   'alsa-lib: ALSA support'
   'freealut: OpenAL support'
