--- a/base-1.0.template
+++ b/base-1.0.template
@@ -1,4 +1,4 @@
-# Maintainer: Xenhat Hex <aur@xenh.at>
+# Maintainer: XenHat <aur@xenh.at>
 # Contributor: Justin Jagieniak <justin@jagieniak.net>
 # Contributor: Rye Mutt
 #
